--- a/index.html
+++ b/index.html
@@ -11,10 +11,36 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alkalami">
     -->
     
-    <title> <!-- title goes here --> </title>
+    <title>Odd Duck</title>
 </head>
 <body>
+    <header>
+        <img>
+        <h1>Odd Duck</h1>
+    </header>
 
+    <main>
+        <div id="resultsContainer">
+            <h2>Results</h2>
+            <ul id="results">
+
+            </ul>
+        </div>
+        <div id="testContainer">
+            <div id="testQuarryContainer">
+            </div>
+            <div id="getResults">
+                <div>Results</div>
+            </div>
+            <div>
+                <p>This is an example text</p>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <h2>by Martin Hansen</h2>
+    </footer>
 <script src="js/app.js"></script>
 </body>
 </html>
