all js works as of current. although not intuitive

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <div id="getResults">
                 <div>Results</div>
             </div>
-            <div>
-                <p>This is an example text</p>
+            <div id="chartContainer">
+                <canvas id="myChart"></canvas>
             </div>
         </div>
     </main>
@@ -41,6 +41,8 @@
     <footer>
         <h2>by Martin Hansen</h2>
     </footer>
+    
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
