thicc-end up page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div id="testQuarryContainer">
             </div>
             <div id="getResults">
-                <div>Results</div>
+                <div>Get Results</div>
             </div>
             <div id="chartContainer">
                 <canvas id="myChart"></canvas>
